compiler/tests/fail/param_expansion/x86-64/expression_global.jazz
param int N = (int)(64u) 3;
u64[N] a = {1,2};
